--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,10 @@ solsido {
   aspect-ratio: 13/4;
 }
 
+.cmajor .major-type {
+  text-transform: capitalize;
+}
+
 .major-staff.you {
   box-shadow: 0px 0px 0px 1px red;
 }
@@ -73,6 +77,7 @@ solsido {
 
 span.bra {
   font-family: BravuraText, sans-serif;
+  vertical-align: middle;
   line-height: 0.5em;
-  vertical-align: sub;
+  font-size: 1.1em;
 }
