--- a/src/site.css
+++ b/src/site.css
@@ -1,4 +1,5 @@
 p,
+h1,
 h3,
 h4{
   margin: 0;
@@ -149,4 +150,18 @@ main {
 
 #topnav section a.active {
   text-decoration: underline;
+}
+
+.site-title {
+  display: block;
+  margin-left: calc(0.5rem + var(--site-header-height));
+}
+
+.site-title {
+  font-size: 30px;
+  line-height: 60px;
+}
+
+.site-title a {
+  color: white;
 }
