--- a/src/rhythm.css
+++ b/src/rhythm.css
@@ -1,3 +1,20 @@
+.up-down {
+  display: flex;
+  user-select: none;
+  cursor: pointer;
+}
+
+.up-down span.value {
+  background: #111;
+  color: white;
+}
+
+.up-down span.value-up,
+.up-down span.value-down {
+  background: #121212;
+  color: white;
+}
+
 .main-staff {
   position: relative;
   aspect-ratio: 13/4;
